챗봇 만들기

--- a/SpringReactQueryLastProject/src/main/resources/application.yml
+++ b/SpringReactQueryLastProject/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: hr
     password: happy
     driver-class-name: oracle.jdbc.driver.OracleDriver
+
+  ai:
+    google:
+      genai:
+        api-key: 
   jpa:
     database: oracle
     properties:
