--- a/SpringReactQueryLastProject/build.gradle
+++ b/SpringReactQueryLastProject/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.5.10'
+	implementation 'org.springframework.ai:spring-ai-google-genai:1.1.2'
+	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai:1.1.2'
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
