Remove sensitive API key from application.yml
Removed the API key for security reasons.

--- a/SpringAIProject_2/src/main/resources/application.yml
+++ b/SpringAIProject_2/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   ai:
     google:
       genai:
-        api-key: AIzaSyBTfOagJAnvBfgiPY4dJXFPBVoiivtCUo4
+        api-key: 
         chat:
           options:
             model: gemini-2.5-flash
